# stockMarketSimulator

./: .gitignore  CMakeLists.txt  README.md  StockMarketSimulator.sln  StockMarketSimulator.vcxproj  StockMarketSimulator.vcxproj.filters
data/: DefaultPortfolioConfig.json  StockSimulatorConfig.json
source/: StockMarketSimulator.cpp
source/Controllers/: BaseAsyncController.cpp  BaseAsyncController.h  BaseController.cpp  BaseController.h  InputController.cpp  InputController.h  MainController.cpp  MainController.h  PortfolioController.cpp  PortfolioController.h  StockSimulatorController.cpp  StockSimulatorController.h
source/Data/: MarketRequestData.h  NotifyEventsData.h  StockSimulatorData.h
source/DataProviders/: StockSimulatorDataProvider.cpp  StockSimulatorDataProvider.h
source/Facades/: StrategyFacade.cpp  StrategyFacade.h
source/MarketRequests/: BaseMarketRequest.cpp  BaseMarketRequest.h  BuyMarketRequest.cpp  BuyMarketRequest.h  SellMarketRequest.cpp  SellMarketRequest.h
source/Observer/: Observer.cpp  Observer.h
source/Strategies/: BaseStrategy.h  RandomStrategy.cpp  RandomStrategy.h  TrendStrategy.cpp  TrendStrategy.h
source/Subject/: Subject.cpp  Subject.h
source/Utils/: Utils.cpp  Utils.h
